first implementation of zooming in reader

--- a/Archive/Base.lproj/Main.storyboard
+++ b/Archive/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="023-u6-HKQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="023-u6-HKQ">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -145,17 +145,57 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Teh-Dt-DnY">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" maximumZoomScale="10" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JBX-Rp-5oF">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                            </imageView>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Teh-Dt-DnY">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="Teh-Dt-DnY" firstAttribute="height" secondItem="JBX-Rp-5oF" secondAttribute="height" id="7LH-d8-ys7"/>
+                                    <constraint firstItem="Teh-Dt-DnY" firstAttribute="centerY" secondItem="JBX-Rp-5oF" secondAttribute="centerY" id="IMs-f2-u60"/>
+                                    <constraint firstItem="Teh-Dt-DnY" firstAttribute="top" secondItem="JBX-Rp-5oF" secondAttribute="top" id="OlA-Fk-7O7"/>
+                                    <constraint firstItem="Teh-Dt-DnY" firstAttribute="centerX" secondItem="JBX-Rp-5oF" secondAttribute="centerX" id="Q07-SA-8Tp"/>
+                                    <constraint firstItem="Teh-Dt-DnY" firstAttribute="top" secondItem="JBX-Rp-5oF" secondAttribute="top" id="QIV-8h-yrS"/>
+                                    <constraint firstItem="Teh-Dt-DnY" firstAttribute="leading" secondItem="JBX-Rp-5oF" secondAttribute="leading" id="SD9-g7-DUc"/>
+                                    <constraint firstAttribute="trailing" secondItem="Teh-Dt-DnY" secondAttribute="trailing" id="XQs-fy-Lqc"/>
+                                    <constraint firstItem="Teh-Dt-DnY" firstAttribute="width" secondItem="JBX-Rp-5oF" secondAttribute="width" id="Yeb-Qs-jMx"/>
+                                    <constraint firstItem="Teh-Dt-DnY" firstAttribute="centerX" secondItem="JBX-Rp-5oF" secondAttribute="centerX" id="brr-zP-dkY"/>
+                                    <constraint firstItem="Teh-Dt-DnY" firstAttribute="centerY" secondItem="JBX-Rp-5oF" secondAttribute="centerY" id="eWm-8p-fuK"/>
+                                    <constraint firstAttribute="bottom" secondItem="Teh-Dt-DnY" secondAttribute="bottom" id="mD8-aA-x5q"/>
+                                    <constraint firstItem="Teh-Dt-DnY" firstAttribute="leading" secondItem="JBX-Rp-5oF" secondAttribute="leading" id="zOg-kw-aPC"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="7LH-d8-ys7"/>
+                                        <exclude reference="Q07-SA-8Tp"/>
+                                        <exclude reference="QIV-8h-yrS"/>
+                                        <exclude reference="Yeb-Qs-jMx"/>
+                                        <exclude reference="eWm-8p-fuK"/>
+                                        <exclude reference="zOg-kw-aPC"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <outlet property="delegate" destination="SCC-r4-Vmb" id="CSF-fx-dza"/>
+                                </connections>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Teh-Dt-DnY" firstAttribute="width" secondItem="Y3f-Ix-Be5" secondAttribute="width" id="Bxk-Mv-R0X"/>
-                            <constraint firstItem="Teh-Dt-DnY" firstAttribute="height" secondItem="Y3f-Ix-Be5" secondAttribute="height" id="bA0-7M-ZqN"/>
-                            <constraint firstItem="Teh-Dt-DnY" firstAttribute="centerY" secondItem="Y3f-Ix-Be5" secondAttribute="centerYWithinMargins" id="mgj-Vu-DBK"/>
-                            <constraint firstItem="Teh-Dt-DnY" firstAttribute="centerX" secondItem="Y3f-Ix-Be5" secondAttribute="centerXWithinMargins" id="v5g-IB-KGF"/>
+                            <constraint firstItem="JBX-Rp-5oF" firstAttribute="width" secondItem="Y3f-Ix-Be5" secondAttribute="width" id="BRq-G4-soE"/>
+                            <constraint firstItem="JBX-Rp-5oF" firstAttribute="leading" secondItem="Y3f-Ix-Be5" secondAttribute="leading" id="L2v-x5-FZX"/>
+                            <constraint firstItem="Teh-Dt-DnY" firstAttribute="width" secondItem="Y3f-Ix-Be5" secondAttribute="width" id="PtM-sk-QYl"/>
+                            <constraint firstItem="JBX-Rp-5oF" firstAttribute="top" secondItem="Y3f-Ix-Be5" secondAttribute="topMargin" id="a8h-SE-1s9"/>
+                            <constraint firstItem="JBX-Rp-5oF" firstAttribute="height" secondItem="Y3f-Ix-Be5" secondAttribute="height" id="cKb-Ol-i34"/>
+                            <constraint firstItem="Teh-Dt-DnY" firstAttribute="height" secondItem="Y3f-Ix-Be5" secondAttribute="height" id="hxZ-Hv-DRb"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="PtM-sk-QYl"/>
+                                <exclude reference="hxZ-Hv-DRb"/>
+                            </mask>
+                        </variation>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <connections>
