--- a/Archive/Base.lproj/Main.storyboard
+++ b/Archive/Base.lproj/Main.storyboard
@@ -22,17 +22,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HP1-YQ-rdj">
-                                <rect key="frame" x="0.0" y="408" width="600" height="128"/>
+                                <rect key="frame" x="0.0" y="476" width="600" height="60"/>
                                 <subviews>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="NqS-pk-uYq">
-                                        <rect key="frame" x="-2" y="75" width="604" height="31"/>
+                                        <rect key="frame" x="-2" y="10" width="604" height="31"/>
                                         <color key="minimumTrackTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         <connections>
                                             <action selector="progressSliderChangedValue:" destination="BYZ-38-t0r" eventType="valueChanged" id="GOE-q4-b1y"/>
                                         </connections>
                                     </slider>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ztu-FO-S2U">
-                                        <rect key="frame" x="20" y="107" width="600" height="21"/>
+                                        <rect key="frame" x="20" y="39" width="600" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="RWM-eA-xQ2"/>
                                         </constraints>
@@ -41,7 +41,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bi8-Tc-M9Z" userLabel="collectionButton">
-                                        <rect key="frame" x="534" y="88" width="46" height="30"/>
+                                        <rect key="frame" x="534" y="20" width="46" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="46" id="5dA-hP-oNy"/>
                                             <constraint firstAttribute="height" constant="30" id="T2E-42-Ubc"/>
@@ -65,7 +65,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="bi8-Tc-M9Z" secondAttribute="bottom" constant="10" id="10M-K9-rry"/>
-                                    <constraint firstAttribute="height" constant="128" id="ANq-7U-prZ"/>
+                                    <constraint firstAttribute="height" constant="60" id="ANq-7U-prZ"/>
                                     <constraint firstItem="KMD-fs-DjH" firstAttribute="top" secondItem="HP1-YQ-rdj" secondAttribute="topMargin" constant="83" id="EoG-Nq-LEM"/>
                                     <constraint firstAttribute="bottom" secondItem="Ztu-FO-S2U" secondAttribute="bottom" id="IOM-eO-4xd"/>
                                     <constraint firstItem="NqS-pk-uYq" firstAttribute="leading" secondItem="HP1-YQ-rdj" secondAttribute="leading" id="KSK-XB-1Ee"/>
@@ -76,7 +76,7 @@
                                     <constraint firstItem="KMD-fs-DjH" firstAttribute="leading" secondItem="HP1-YQ-rdj" secondAttribute="leadingMargin" constant="33" id="acJ-ti-6pQ"/>
                                     <constraint firstItem="NqS-pk-uYq" firstAttribute="centerY" secondItem="HP1-YQ-rdj" secondAttribute="centerY" id="dTB-KG-eah"/>
                                     <constraint firstItem="bi8-Tc-M9Z" firstAttribute="centerY" secondItem="HP1-YQ-rdj" secondAttribute="centerY" id="ejC-pI-SSo"/>
-                                    <constraint firstItem="NqS-pk-uYq" firstAttribute="top" secondItem="HP1-YQ-rdj" secondAttribute="top" constant="75" id="gVU-a0-y4w"/>
+                                    <constraint firstItem="NqS-pk-uYq" firstAttribute="top" secondItem="HP1-YQ-rdj" secondAttribute="top" constant="10" id="gVU-a0-y4w"/>
                                     <constraint firstAttribute="trailing" secondItem="bi8-Tc-M9Z" secondAttribute="trailing" constant="20" id="koc-eJ-4gJ"/>
                                     <constraint firstItem="Ztu-FO-S2U" firstAttribute="leading" secondItem="HP1-YQ-rdj" secondAttribute="leading" constant="20" id="qJJ-UA-9gx">
                                         <variation key="widthClass=compact" constant="0.0"/>
@@ -178,10 +178,12 @@
                                 </variation>
                                 <connections>
                                     <outlet property="delegate" destination="SCC-r4-Vmb" id="CSF-fx-dza"/>
+                                    <outletCollection property="gestureRecognizers" destination="71a-Xh-YV0" appends="YES" id="qEP-SC-LfM"/>
                                 </connections>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="JBX-Rp-5oF" firstAttribute="width" secondItem="Y3f-Ix-Be5" secondAttribute="width" id="BRq-G4-soE"/>
                             <constraint firstItem="JBX-Rp-5oF" firstAttribute="leading" secondItem="Y3f-Ix-Be5" secondAttribute="leading" id="L2v-x5-FZX"/>
@@ -200,9 +202,16 @@
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <connections>
                         <outlet property="imageView" destination="Teh-Dt-DnY" id="Era-A0-Uah"/>
+                        <outlet property="scrollView" destination="JBX-Rp-5oF" id="9fN-64-m3L"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nK6-JA-NtF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer numberOfTapsRequired="2" id="71a-Xh-YV0">
+                    <connections>
+                        <action selector="scrollViewDoubleTapped:" destination="SCC-r4-Vmb" id="vXt-0f-xCi"/>
+                        <outlet property="delegate" destination="SCC-r4-Vmb" id="agp-OB-EZo"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="3383" y="3527"/>
         </scene>
