add sorting to explored list

--- a/Archive/Base.lproj/Main.storyboard
+++ b/Archive/Base.lproj/Main.storyboard
@@ -7,6 +7,7 @@
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
     </dependencies>
     <scenes>
         <!--ReaderVC-->
@@ -778,15 +779,93 @@
                             <outlet property="delegate" destination="nhk-cK-l3N" id="TmD-2y-9lj"/>
                         </connections>
                     </collectionView>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="Z54-sc-prY">
+                        <rightBarButtonItems>
+                            <barButtonItem image="sort" id="Wkl-fS-x4e" userLabel="Sort_list_button">
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <action selector="showSortLIst:" destination="nhk-cK-l3N" id="rN8-cN-8xX"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem image="down_sort" id="IMF-5c-tFs" userLabel="Down_Up_sort_button">
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <action selector="changeSortDirection:" destination="nhk-cK-l3N" id="Dph-VF-g6D"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xnf-Vc-Yma" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1350" y="3004"/>
+            <point key="canvasLocation" x="1083" y="2988"/>
+        </scene>
+        <!--Sort ListVC-->
+        <scene sceneID="RCI-tv-3f2">
+            <objects>
+                <tableViewController storyboardIdentifier="sortListVC" id="OI6-JW-L3T" customClass="IASortListVC" customModule="Archive" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="r1t-zE-VuK">
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="optionCellIdentifier" id="aAt-GM-CXY" customClass="IASortListTableViewCell" customModule="Archive" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="300" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aAt-GM-CXY" id="eje-T3-cSr">
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5zg-b4-aJq">
+                                            <rect key="frame" x="17" y="11" width="222" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="222" id="4zq-2f-6qQ"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zIM-Hk-8Q3">
+                                            <rect key="frame" x="257" y="9" width="25" height="25"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="25" id="lQg-Pg-DOh"/>
+                                                <constraint firstAttribute="width" constant="25" id="oiW-sG-wq1"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailingMargin" secondItem="zIM-Hk-8Q3" secondAttribute="trailing" constant="10" id="8wM-Ol-nSb"/>
+                                        <constraint firstItem="5zg-b4-aJq" firstAttribute="centerY" secondItem="eje-T3-cSr" secondAttribute="centerY" id="WmA-iB-SLd"/>
+                                        <constraint firstItem="zIM-Hk-8Q3" firstAttribute="centerY" secondItem="eje-T3-cSr" secondAttribute="centerY" id="ZkJ-vS-8Vv"/>
+                                        <constraint firstItem="5zg-b4-aJq" firstAttribute="leading" secondItem="eje-T3-cSr" secondAttribute="leadingMargin" constant="9" id="rfd-mI-HQx"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="optionImageView" destination="zIM-Hk-8Q3" id="zJ3-h9-slA"/>
+                                    <outlet property="optionLabel" destination="5zg-b4-aJq" id="lEK-cA-Duk"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="OI6-JW-L3T" id="mJ1-wV-Lvb"/>
+                            <outlet property="delegate" destination="OI6-JW-L3T" id="BJF-gx-raZ"/>
+                        </connections>
+                    </tableView>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="300" height="300"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0do-DI-Z0n" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1871" y="2584"/>
         </scene>
     </scenes>
     <resources>
+        <image name="down_sort" width="32" height="32"/>
         <image name="ia-button-plain" width="30" height="30"/>
         <image name="search-button" width="30" height="30"/>
+        <image name="sort" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="S2s-Yx-eJD"/>
